news filter and tick box push notif

--- a/src/app/pages/newsfeed-management/news/index/news-index.component.html
+++ b/src/app/pages/newsfeed-management/news/index/news-index.component.html
@@ -74,7 +74,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Kategori" prop="creator_id"></ngx-datatable-column>
+        <ngx-datatable-column name="Kategori" prop="category_name"></ngx-datatable-column>
 
         <ngx-datatable-column name="Tanggal Dibuat" prop="created_at">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
