direct access denied, optimalisasi audience

--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -3,8 +3,8 @@
   <page-content-header [contentTitle]="'Buat Audience'"></page-content-header>
   <!-- / HEADER -->
 
-  <div class="content p-24">
-    <div class="ayo-main-wrapper mat-white-bg" fxLayout="column" fusePerfectScrollbar>
+  <div class="content p-24" fusePerfectScrollbar>
+    <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
       <div fxLayout="row" fxLayoutAlign="space-between center">
         <h2 class="">Buat Audience</h2>
       </div>
@@ -102,7 +102,7 @@
             </mat-form-field>
           </div> -->
 
-      <form [formGroup]="formFilter" autoComplete="off">
+      <form [formGroup]="formFilter" autoComplete="off" *ngIf="formAudience.get('type').value !== 'pick-all'">
         <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
 
           <mat-form-field fxFlex="12%" class="is-light form-primary">
@@ -164,18 +164,18 @@
 
     <div class="p-0">
       <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar>
-      <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
-        [rowHeight]="'auto'" [limit]="10" [selected]="selected" [selectionType]="'checkbox'" [selectAllRowsOnPage]="false"
-        (select)='onSelect($event)' [sorts]="[{prop: 'name', dir: 'asc'}]">
-        <!-- <ngx-datatable-column [width]="30" [sortable]="false" [canAutoResize]="false" [draggable]="false"
-                [resizeable]="false" [headerCheckboxable]="true" [checkboxable]="true"> -->
-        <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true" [draggable]="false" [resizeable]="false"
-          [headerCheckboxable]="true">
-          <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
+      <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
+        [rowHeight]="'auto'" [reorderable]="reorderable" [selectionType]="formAudience.get('type').value !== 'pick-all' ? 'checkbox' : ''"
+        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [selectAllRowsOnPage]="false"
+        [externalSorting]="true" (page)="setPage($event)" [sorts]="[{prop: 'name', dir: 'asc'}]" (select)="onSelect($event)"
+        [rowIdentity]="getId" (sort)="onSort($event)">
+        <ngx-datatable-column [width]="68" *ngIf="formAudience.get('type').value !== 'pick-all'" [canAutoResize]="false"
+          [sortable]="true" [draggable]="false" [resizeable]="false" [headerCheckboxable]="true">
+          <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
             let-selectFn="selectFn">
             <mat-checkbox [checked]="allRowsSelected" [disabled]="formAudience.get('type').value === 'pick-all'"
               (change)="selectFn(!allRowsSelected)"></mat-checkbox>
-          </ng-template>
+          </ng-template> -->
 
           <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected" let-onCheckboxChangeFn="onCheckboxChangeFn">
             <mat-checkbox [checked]="isSelected" [disabled]="formAudience.get('type').value === 'pick-all'" (change)="onCheckboxChangeFn($event)"></mat-checkbox>
