--- a/src/app/pages/user-management/retailer/create/retailer-create.component.html
+++ b/src/app/pages/user-management/retailer/create/retailer-create.component.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
-              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+              <button mat-raised-button matStepperNext (click)="step1()" type="button" class="confirmation-button">
                 Lanjut
               </button>
             </div>
@@ -82,7 +82,7 @@
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
-              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+              <button mat-raised-button matStepperNext (click)="step2()" type="button" class="confirmation-button">
                 Lanjut
               </button>
             </div>
@@ -182,7 +182,7 @@
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
-              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+              <button mat-raised-button matStepperNext (click)="step3()" type="button" class="confirmation-button">
                 Lanjut
               </button>
             </div>
@@ -219,7 +219,7 @@
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
-              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+              <button mat-raised-button matStepperNext (click)="step4()" type="button" class="confirmation-button">
                 Lanjut
               </button>
             </div>
