--- a/src/app/pages/user-management/wholesaler/create/wholesaler-create.component.html
+++ b/src/app/pages/user-management/wholesaler/create/wholesaler-create.component.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
-              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+              <button mat-raised-button matStepperNext (click)="step1()" type="button" class="confirmation-button">
                 Lanjut
               </button>
             </div>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
-              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+              <button mat-raised-button matStepperNext (click)="step2()" type="button" class="confirmation-button">
                 Lanjut
               </button>
             </div>
@@ -164,7 +164,7 @@
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
-              <button mat-raised-button matStepperNext type="button" class="confirmation-button">
+              <button mat-raised-button matStepperNext (click)="step3()" type="button" class="confirmation-button">
                 Lanjut
               </button>
             </div>
