--- a/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
+++ b/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
@@ -103,9 +103,9 @@
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Nama Pemilik" prop="owner">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+          <!-- <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <a class="direct-edit" (click)="directEdit(row)">{{row.owner}} </a>
-          </ng-template>
+          </ng-template> -->
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Kode WS" prop="code" summary-template="activeCell"></ngx-datatable-column>
