--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -3,7 +3,7 @@
   <page-content-header [contentTitle]="'Buat Audience'"></page-content-header>
   <!-- / HEADER -->
 
-  <div class="content p-24" fusePerfectScrollbar>
+  <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
       <div fxLayout="row" fxLayoutAlign="space-between center">
         <h2 class="">Buat Audience</h2>
