--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -9,7 +9,12 @@
         <form name="form" [formGroup]="forgotPasswordForm">
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput formControlName="password" placeholder="Kata Sandi Baru" type="password">
+              <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
+              <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
+              <button mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
+                <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
+                <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
+              </button>
               <mat-error *ngIf="forgotPasswordForm.controls['password'].hasError('required') && forgotPasswordForm.controls['password'].touched">
                 Kata sandi baru harus diisi
               </mat-error>
@@ -18,7 +23,14 @@
 
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput formControlName="password_confirmation" placeholder="Konfirmasi Kata Sandi Baru" type="password">
+              <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
+                placeholder="Konfirmasi Kata Sandi Baru">
+              <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
+                placeholder="Konfirmasi Kata Sandi Baru">
+              <button mat-button matSuffix mat-icon-button (click)="showConfirmPassword = !showConfirmPassword">
+                <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
+                <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
+              </button>
               <mat-error *ngIf="forgotPasswordForm.controls['password_confirmation'].hasError('required') && forgotPasswordForm.controls['password_confirmation'].touched">
                 Konfirmasi Kata Sandi Baru harus diisi
               </mat-error>
