--- a/src/app/pages/settings/change-password/index/change-password-index.component.html
+++ b/src/app/pages/settings/change-password/index/change-password-index.component.html
@@ -6,7 +6,7 @@
   <!-- / HEADER -->
   <div class="content p-24">
     <form [formGroup]="changePassword" autocomplete="off">
-      <div class="ayo-main-wrapper mat-bg-white">
+      <div class="ayo-main-wrapper mat-bg-white is-half">
         <div fxLayout="row" class="pb-16" fxLayoutAlign="start center">
           <h2 class="">Ubah Kata Sandi</h2>
         </div>
@@ -14,7 +14,12 @@
 
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="password" formControlName="old_password" placeholder="Kata Sandi Sekarang">
+              <input matInput type="text" *ngIf="showCurrentPassword" formControlName="old_password" placeholder="Kata Sandi Sekarang">
+              <input matInput type="password" *ngIf="!showCurrentPassword" formControlName="old_password" placeholder="Kata Sandi Sekarang">
+              <button mat-button matSuffix mat-icon-button (click)="showCurrentPassword = !showCurrentPassword">
+                <mat-icon *ngIf="!showCurrentPassword">remove_red_eye</mat-icon>
+                <mat-icon *ngIf="showCurrentPassword">visibility_off</mat-icon>
+              </button>
               <mat-error *ngIf="changePassword.controls['old_password'].hasError('required') && changePassword.controls['old_password'].touched">
                 Kata Sandi Sekarang harus diisi
               </mat-error>
@@ -22,7 +27,12 @@
           </div>
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="password" formControlName="password" placeholder="Kata Sandi Baru">
+              <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
+              <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
+              <button mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
+                <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
+                <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
+              </button>
               <mat-error *ngIf="changePassword.controls['password'].hasError('required') && changePassword.controls['password'].touched">
                 Kata Sandi Baru harus diisi
               </mat-error>
@@ -31,7 +41,14 @@
 
           <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="password" formControlName="password_confirmation" placeholder="Konfirmasi Kata Sandi Baru">
+              <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
+                placeholder="Konfirmasi Kata Sandi Baru">
+              <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
+                placeholder="Konfirmasi Kata Sandi Baru">
+              <button mat-button matSuffix mat-icon-button (click)="showConfirmPassword = !showConfirmPassword">
+                <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
+                <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
+              </button>
               <mat-error *ngIf="changePassword.controls['password_confirmation'].hasError('required') && changePassword.controls['password_confirmation'].touched">
                 Konfirmasi Kata Sandi Baru harus diisi
               </mat-error>
