--- a/src/app/pages/sku-management/product/index/product-index.component.html
+++ b/src/app/pages/sku-management/product/index/product-index.component.html
@@ -58,6 +58,7 @@
           </ng-template>
         </ngx-datatable-column>
 
+        <ngx-datatable-column name="Kode Batang" prop="barcode"></ngx-datatable-column>
         <ngx-datatable-column name="Perusahaan" prop="brand_name"></ngx-datatable-column>
 
         <ngx-datatable-column [width]="88" name="Kategori" prop="category_name"></ngx-datatable-column>
