--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -12,17 +12,22 @@
         <mat-tab-group>
           <mat-tab label="Informasi Produk">
             <div class="ayo-middle p-24" fxLayout="column">
-              <!-- <div class="button-row">
-                    <button mat-raised-button>
-                      <mat-icon>horizontal_split</mat-icon> SCAN BARCODE</button>
-                  </div>
-                  <br> -->
+              <div class="button" (click)="openDialog()">
+                <div fxLayout="row wrap" fxLayoutAlign="space-between center">
+                  <mat-icon class="secondary-text">horizontal_split</mat-icon>
+                  <span class="h5 text-center">SCAN BARCODE</span>
+                </div>
+              </div>
+              <br>
 
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <input matInput type="text" placeholder="Nama Produk" formControlName="name">
                 <mat-error *ngIf="formProductGroup.controls['name'].hasError('required') && formProductGroup.controls['name'].touched">
                   Nama Produk harus diisi
                 </mat-error>
+              </mat-form-field>
+              <mat-form-field fxFlex="100" class="is-light form-primary">
+                <input matInput type="text" placeholder="Barcode" formControlName="barcode" readonly>
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <!-- <mat-select placeholder="Perusahaan" formControlName="brand">
