--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -11,7 +11,7 @@
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
               <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
-              <button mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
+              <button type="button" mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
                 <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
               </button>
@@ -27,7 +27,7 @@
                 placeholder="Konfirmasi Kata Sandi Baru">
               <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
                 placeholder="Konfirmasi Kata Sandi Baru">
-              <button mat-button matSuffix mat-icon-button (click)="showConfirmPassword = !showConfirmPassword">
+              <button type="button" mat-button matSuffix mat-icon-button (click)="showConfirmPassword = !showConfirmPassword">
                 <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
               </button>
