--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -30,7 +30,7 @@
             <mat-form-field class="is-light form-primary">
               <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
               <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi">
-              <button mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
+              <button type="button" mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
                 <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
               </button>
