--- a/src/app/pages/settings/change-password/index/change-password-index.component.html
+++ b/src/app/pages/settings/change-password/index/change-password-index.component.html
@@ -16,7 +16,7 @@
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" *ngIf="showCurrentPassword" formControlName="old_password" placeholder="Kata Sandi Sekarang">
               <input matInput type="password" *ngIf="!showCurrentPassword" formControlName="old_password" placeholder="Kata Sandi Sekarang">
-              <button mat-button matSuffix mat-icon-button (click)="showCurrentPassword = !showCurrentPassword">
+              <button type="button" mat-button matSuffix mat-icon-button (click)="showCurrentPassword = !showCurrentPassword">
                 <mat-icon *ngIf="!showCurrentPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showCurrentPassword">visibility_off</mat-icon>
               </button>
@@ -29,7 +29,7 @@
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
               <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
-              <button mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
+              <button type="button" mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
                 <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
               </button>
@@ -45,7 +45,7 @@
                 placeholder="Konfirmasi Kata Sandi Baru">
               <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
                 placeholder="Konfirmasi Kata Sandi Baru">
-              <button mat-button matSuffix mat-icon-button (click)="showConfirmPassword = !showConfirmPassword">
+              <button type="button" mat-button matSuffix mat-icon-button (click)="showConfirmPassword = !showConfirmPassword">
                 <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
               </button>
