--- a/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
+++ b/src/app/pages/user-management/field-force/edit/field-force-edit.component.html
@@ -102,7 +102,7 @@
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
               <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
-              <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showPassword = !showPassword">
+              <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showPassword = !showPassword">
                 <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
               </button>
@@ -117,7 +117,7 @@
                 placeholder="Konfirmasi Kata Sandi Baru">
               <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
                 placeholder="Konfirmasi Kata Sandi Baru">
-              <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showConfirmPassword = !showConfirmPassword">
+              <button type="button" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="showConfirmPassword = !showConfirmPassword">
                 <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
               </button>
